--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$m887MtSYydgmQM6T5bowW.m6mHrU25NTBJwoGCWnD1xP6oKKtpRnW"
+# 	- password: java.lang.String = "$2a$05$p74ISYrva1zo5mLkGtdxYO7KOhBcSum.JhvJIsDln0NHBg/WlLxTO"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$yMeBSRDvDcQQO10Dwix.6e4JmRmyBQn2tzZL0T1py9ziynyCNn8vm"
+# 	- password: java.lang.String = "$2a$05$KETCecmwE/yxAoeiwpKGHuxGSXEbBHB81K0lsIJms96DPmGypTLaK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
