--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$WX.VLeMap5iDJt/YyfsERumfrNdckXBPoymKnTbOJpaE5fW3c0Hbu"
+# 	- password: java.lang.String = "$2a$05$WiBYcol5OaaonPMwXhR7H.ZMkKu9oLBzvCgBaTpvKMVJRQhzkNebq"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$qD5ZDrt4pkJLhDMJJ3nk7.UZXIy47GnebLzvDicxGwAulSIxkYRwa"
+# 	- password: java.lang.String = "$2a$05$9Cbjz0zoB3y.JRNQNvXRoufvz210gNBl/UOHFQ.FZn4vLlcHIeA82"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
