--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$PIzyHokoOwH1zyau1Ledx.DqQQeH2JFwuVMcmjrocXMQt/J9p4Taq"
+# 	- password: java.lang.String = "$2a$05$ITY0j2BgXFomZTFGTWGb.elzy8AR1jYQ7JRLnV.28890eao/EDT9G"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$nVa62YvkBBxul.ykCJeGNe6UaNnaAgpg3AJsQOmBzcXDsMyiD7Bsu"
+# 	- password: java.lang.String = "$2a$05$wf6g2Hak6/ivLbFYwibyt.aGipii4JBVzk6d6iu5Ff/W.CLxpcmmW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
