--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$SQXFbMZWF0yvHOrDyefl5uAJENR50r6uMxpL649MTuFtDHLYQQWyS"
+# 	- password: java.lang.String = "$2a$05$QzhwnAyLN9nczSC9sDiVq.bSKfjOyD9Y9iLj2JE8BDbHWwDmOhre6"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$Z0m/8diXhOPncG/4lqAaYOfuCwse7OaQ/b52pvqHR7pwhZcuCR/uS"
+# 	- password: java.lang.String = "$2a$05$vi.vtoks0780edvrURYhUu29z9p.CRnXig8nwbNlUbQ.q.7Fg2U2m"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
