--- a/src/main/resources/application-deployment.properties
+++ b/src/main/resources/application-deployment.properties
@@ -10,9 +10,9 @@
 
 # User-defined properties.  Please, change them to adapt the starter project to your needs. 
 
-spring.datasource.url							= jdbc:mysql://bftmopelmoii2cw4hxxg-mysql.services.clever-cloud.com:3306/bftmopelmoii2cw4hxxg
-spring.datasource.username						= u29fjfkcskhzfyd4
-spring.datasource.password						= CAJn8zhJOAKoS0FFKIT3
+spring.datasource.url							= jdbc:mysql://bntlwbrkwmjqhyy606bk-mysql.services.clever-cloud.com:3306/bntlwbrkwmjqhyy606bk
+spring.datasource.username						= uugmz8icbptpx4ux
+spring.datasource.password						= CttZHnU29Pj4chmEdTWv
 
 spring.jpa.hibernate.show-sql					= true
 spring.jpa.hibernate.format-sql					= true
